<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/list_menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/label_menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/list_menu_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/label_menu_sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/list_menu_sort_by_name"
                android:title="@string/label_menu_sort_by_name" />
            <item
                android:id="@+id/list_menu_sort_by_date"
                android:title="@string/label_menu_sort_by_date" />
            <item
                android:id="@+id/list_menu_sort_by_priority"
                android:title="@string/label_menu_sort_by_priority" />
        </menu>
    </item>

    <item
        android:id="@+id/list_additional_menu"
        android:icon="@drawable/ic_menu"
        android:title="@string/label_menu_other"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/list_menu_hide_completed"
                android:checkable="true"
                android:title="@string/label_menu_hide_all_completed" />
        </menu>
    </item>

</menu>