<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.list.ListFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:textColor="?textColorPrimary"
            android:textSize="@dimen/bigger_text"
            tools:text="March 9, 2020" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:textColor="@color/mid_gray"
            android:textSize="@dimen/small_text"
            android:visibility="visible"
            tools:text="5 incomplete, 5 completed" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:background="#33D0D0D0" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/default_margin"
            android:nestedScrollingEnabled="false"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="10"
            tools:listitem="@layout/list_item" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ImageView
        android:id="@+id/iv_empty_db"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center|top"
        android:contentDescription="@string/content_desc_empty_db"
        android:src="@drawable/ic_empty_db"
        android:visibility="gone"
        app:layout_anchor="@+id/tv_empty_db"
        app:layout_anchorGravity="center|top" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_empty_db"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_db"
        android:textColor="?textColorSecondary"
        android:visibility="gone"
        app:layout_anchor="@+id/rv_list"
        app:layout_anchorGravity="center" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/default_margin"
        android:backgroundTint="@color/indigo_600"
        android:contentDescription="@string/content_desc_add_item"
        android:src="@drawable/ic_add_item"
        app:backgroundTint="@color/indigo_400"
        app:borderWidth="@dimen/border_with"
        app:tint="@color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>